force-app/main/default/objects/MusubuCompany__c/MusubuCompany__c.object-meta.xml
<CustomObject>
    <description>結ぶ法人情報。外部 API から取得した企業情報を管理します。</description>
    <label>結ぶ法人情報</label>
    <nameField>
        <label>会社名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>結ぶ法人情報</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>