force-app/main/default/objects/MusubuCompany__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>住所（全体）</description>
    <label>住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>