force-app/main/default/objects/MusubuCompany__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <description>資本金</description>
    <label>資本金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>