force-app/main/default/objects/MusubuCompany__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>市区町村</description>
    <label>市区町村</label>
    <length>100</length>
    <type>Text</type>
</CustomField>