force-app/main/default/objects/MusubuCompany__c/fields/CorporateNumber__c.field-meta.xml
<CustomField>
    <fullName>CorporateNumber__c</fullName>
    <description>法人番号（13桁）</description>
    <externalId>true</externalId>
    <label>法人番号</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>