force-app/main/default/objects/MusubuCompany__c/fields/DataSource__c.field-meta.xml
<CustomField>
    <fullName>DataSource__c</fullName>
    <description>データソース（API 名称等）</description>
    <label>データソース</label>
    <length>100</length>
    <type>Text</type>
</CustomField>