force-app/main/default/objects/MusubuCompany__c/fields/EmployeeCount__c.field-meta.xml
<CustomField>
    <fullName>EmployeeCount__c</fullName>
    <description>従業員数</description>
    <label>従業員数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>