force-app/main/default/objects/MusubuCompany__c/fields/EstablishedDate__c.field-meta.xml
<CustomField>
    <fullName>EstablishedDate__c</fullName>
    <description>設立日</description>
    <label>設立日</label>
    <type>Date</type>
</CustomField>