force-app/main/default/objects/MusubuCompany__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>業種</description>
    <label>業種</label>
    <length>100</length>
    <type>Text</type>
</CustomField>