force-app/main/default/objects/MusubuCompany__c/fields/LastApiSyncDate__c.field-meta.xml
<CustomField>
    <fullName>LastApiSyncDate__c</fullName>
    <description>最終 API 同期日時</description>
    <label>最終 API 同期日時</label>
    <type>DateTime</type>
</CustomField>