force-app/main/default/objects/MusubuCompany__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>郵便番号</description>
    <label>郵便番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>