force-app/main/default/objects/MusubuCompany__c/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <description>都道府県</description>
    <label>都道府県</label>
    <length>20</length>
    <type>Text</type>
</CustomField>