force-app/main/default/objects/MusubuCompany__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Webサイト URL</description>
    <label>Webサイト</label>
    <type>Url</type>
</CustomField>